feat: program param is optional in TEI controller [DHIS2-16051]